<resources>
    <string name="app_name">Component</string>
    <string name="action_settings">Settings</string>
    <string name="btn_Change">Change</string>
    <string name="txt_Title">请选择你学过的语言</string>
    <string name="checkBoxC">C</string>
    <string name="checkBoxJava">Java</string>
    <string name="checkBoxPython">PHP</string>
    <string name="txt_RadioButton">请选择您的性别</string>
</resources>
