<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.w.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Change"
        android:id="@+id/btn_txt_Change"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChange"
        android:hint="                                                     "
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btn_txt_Change"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Title"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/editTextChange"
        android:id="@+id/txtView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxC"
        android:id="@+id/checkBoxC"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/txtView"
        android:layout_alignParentLeft="true"
        android:checked="false"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxJava"
        android:id="@+id/checkBoxJava"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/checkBoxC"
        android:layout_alignParentLeft="true"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPython"
        android:id="@+id/checkBoxPython"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/checkBoxJava"
        android:layout_alignParentLeft="true"
        android:onClick="onCheckboxClicked"/>




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_RadioButton"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/checkBoxPython"/>

    <RadioGroup
        android:id="@+id/RadioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textView"
        android:textSize="25dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:text="男"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

</RelativeLayout>
